--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/cordofonos"
 db.default.username=root
-db.default.password="toor"
+db.default.password="root"
 
 #repositorio por default de models
 ebean.default = ["models.*"]
